add new website from server na

--- a/xem-phim-moi/the-gioi-bi-mat-cua-arrietty/index.html
+++ b/xem-phim-moi/the-gioi-bi-mat-cua-arrietty/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             11
+             12
             </dd>
             <br/>
            </dl>
@@ -1607,28 +1607,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Brothers For Life (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             54 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1641,6 +1619,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hùng Long Phong Bá (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              54 lượt xem
@@ -1686,18 +1686,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chien-binh" title="Chiến Binh">
+          <a class="list-top-movie-link" href="/phim-moi/ruroni-kenshin-densetsu-no-saigo-hen" title="Rurôni Kenshin: Densetsu no saigo-hen">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-binh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ruroni-kenshin-densetsu-no-saigo-hen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chiến Binh
+             Rurôni Kenshin: Densetsu no saigo-hen
             </span>
             <span class="list-top-movie-item-en">
-             Warrior
+             Rurôni Kenshin: Densetsu no saigo-hen
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/gia-cua-uoc-mo-2" title="Giá của ước mơ 2">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-cua-uoc-mo-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Giá của ước mơ 2
+            </span>
+            <span class="list-top-movie-item-en">
+             The Price of Dream II
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1708,40 +1730,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bao-phe" title="Bao Phê">
+          <a class="list-top-movie-link" href="/phim-moi/mua-he-kinh-hai" title="Mùa hè kinh hãi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-phe-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mua-he-kinh-hai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bao Phê
+             Mùa hè kinh hãi
             </span>
             <span class="list-top-movie-item-en">
-             How High
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/barbie-mariposa-and-her-butterfly-fairy-friends" title="Barbie: Mariposa and Her Butterfly Fairy Friends">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/barbie-mariposa-and-her-butterfly-fairy-friends-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Barbie: Mariposa and Her Butterfly Fairy Friends
-            </span>
-            <span class="list-top-movie-item-en">
-             Barbie: Mariposa and Her Butterfly Fairy Friends
+             I Know What You Did Last Summer
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1752,21 +1752,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mac-ket-3" title="Mắc kẹt">
+          <a class="list-top-movie-link" href="/phim-moi/dan-do-chua-te-nhac-rock" title="Dẫn Độ Chúa Tể Nhạc Rock">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mac-ket-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dan-do-chua-te-nhac-rock-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mắc kẹt
+             Dẫn Độ Chúa Tể Nhạc Rock
             </span>
             <span class="list-top-movie-item-en">
-             The Stranded
+             Get Him to the Greek
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1774,18 +1774,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quai-vat-tau-dien-ngam" title="Quái Vật Tàu Điện Ngầm">
+          <a class="list-top-movie-link" href="/phim-moi/ivy-bean" title="Ivy + Bean">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quai-vat-tau-dien-ngam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ivy-bean-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quái Vật Tàu Điện Ngầm
+             Ivy + Bean
             </span>
             <span class="list-top-movie-item-en">
-             Creep
+             Ivy + Bean
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
