add new website from server na

--- a/xem-phim-moi/ngon-doi-hoa-hong-anh/index.html
+++ b/xem-phim-moi/ngon-doi-hoa-hong-anh/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             10
+             11
             </dd>
             <br/>
            </dl>
@@ -1690,18 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phong-ma-ky" title="Phong Ma Kỷ">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-kin-phan-2" title="Hội kín (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phong-ma-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-kin-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phong Ma Kỷ
+             Hội kín (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             The Legend Of Earth Traveler Sun
+             The Order (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1712,18 +1712,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/o-long-thich-khach" title="Ô long thích khách">
+          <a class="list-top-movie-link" href="/phim-moi/duoi-bong-trung-dien" title="Dưới bóng trung điện">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/o-long-thich-khach-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duoi-bong-trung-dien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ô long thích khách
+             Dưới bóng trung điện
             </span>
             <span class="list-top-movie-item-en">
-             Assassin in Dream
+             Under the Queen's Umbrella
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1734,18 +1734,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nang-serena" title="Nàng Serena">
+          <a class="list-top-movie-link" href="/phim-moi/the-seventh-day" title="The Seventh Day">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nang-serena-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-seventh-day-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nàng Serena
+             The Seventh Day
             </span>
             <span class="list-top-movie-item-en">
-             Serena
+             The Seventh Day
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/illang-lu-doan-soi" title="Illang: Lữ đoàn sói">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/illang-lu-doan-soi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Illang: Lữ đoàn sói
+            </span>
+            <span class="list-top-movie-item-en">
+             Illang: The Wolf Brigade
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1756,43 +1778,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-giu-mo-theo-doi-cua-chua" title="Người giữ mộ: theo dõi của Chúa">
-           <span class="status">
-            Vietsub - HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-giu-mo-theo-doi-cua-chua-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Người giữ mộ: theo dõi của Chúa
-            </span>
-            <span class="list-top-movie-item-en">
-             Grave Keeper: Track of Lord
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dota-dong-mau-rong" title="Dota: Dòng Máu Rồng">
+          <a class="list-top-movie-link" href="/phim-moi/perfect-strangers" title="Perfect Strangers">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dota-dong-mau-rong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/perfect-strangers-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dota: Dòng Máu Rồng
+             Perfect Strangers
             </span>
             <span class="list-top-movie-item-en">
-             Dota: Dragon's Blood
+             Perfect Strangers
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
